<resources>
    <string name="app_name">CanTrip</string>
    <string name="trip_title">Trip</string>
    <string name="plan_title">Plan\n</string>
    <string name="empty_plan_list">no plans. create one!</string>
    <string name="empty_recommended">no recommended plans yet</string>
    <string name="plan_activity">My Plan</string>
    <string name="add_flight">Add New Flight</string>
    <string name="add_hotel">Add New Hotel</string>
    <string name="add_attraction">Add New Attraction Visit</string>
    <string name="add_trip_activity">Add New Trip</string>
    <string name="trip_location_from">Where from?</string>
    <string name="confirmation_text">Confirmation #:</string>
    <string name="trip_location_to">Where to?</string>
    <string name="airline">Airline</string>
    <string name="flight_number">Flight #</string>
    <string name="trip_button">Complete</string>
    <string name="trip_date_from">From:</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="trip_date_to">To:</string>
    <string name="hotel_address">Hotel address</string>
    <string name="my_trips_tab">My Trips</string>
    <string name="recommended_tab">Recommended</string>
    <string name="month_hint">MM</string>
    <string name="day_hint">DD</string>
    <string name="attraction_name">Attraction name</string>
    <string name="departure_date">Departure date?</string>
    <string name="arrival_date">Arrival date?</string>
    <string name="what_time">At what time?</string>
    <string name="year_hint">YYYY</string>
    <string name="check_in">Check in:</string>
    <string name="check_out">Check out:</string>
    <string name="save">Save</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="end_visit">End Visit:</string>
    <string name="start_visit">Start Visit:</string>
    <string name="add_new_plan">Add New Plan</string>
    <string name="landmark_address">Attraction Address</string>
    <string name="add_date_button">Next</string>
    <string name="flight">Flight</string>
    <string name="hotel">Hotel</string>
    <string name="attraction">Attraction</string>
    <string name="airlines">Airlines</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="departs">Departs:</string>
    <string name="arrives">Arrives:</string>
    <string name="attraction_address">Attraction address</string>
</resources>
