<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewTripDateFragment">

    <TextView
        android:id="@+id/date_from"
        android:text="@string/trip_date_from"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/date_to"
        android:text="@string/trip_date_to"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/add_date_button"
        android:layout_marginRight="20dp"
        android:layout_gravity="bottom|end"
        android:text="@string/trip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>